--- a/Учебная/Учебная.csproj
+++ b/Учебная/Учебная.csproj
@@ -52,10 +52,19 @@
     <Compile Include="Menu.Designer.cs">
       <DependentUpon>Menu.cs</DependentUpon>
     </Compile>
+    <Compile Include="One.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="One.Designer.cs">
+      <DependentUpon>One.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="One.resx">
+      <DependentUpon>One.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
