--- a/Учебная/Учебная.csproj
+++ b/Учебная/Учебная.csproj
@@ -98,6 +98,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Three.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Three.Designer.cs">
+      <DependentUpon>Three.cs</DependentUpon>
+    </Compile>
     <Compile Include="Two.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Three.resx">
+      <DependentUpon>Three.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Two.resx">
       <DependentUpon>Two.cs</DependentUpon>
     </EmbeddedResource>
